fix: word wrap

--- a/src/features/Designer/components/Overview/overview.module.scss
+++ b/src/features/Designer/components/Overview/overview.module.scss
@@ -195,6 +195,7 @@
   margin-bottom: 0.5rem;
   padding: 0;
   width: 100%;
+  word-break: break-word;
 
   :global .bx--bmrg-text-input {
     background-color: transparent;
